<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/colorAllScreen">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/settings"
            style="@style/toolbar_text"
            />
    </Toolbar>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:text="@string/dark_theme"
            style="@style/Text"
            android:layout_marginEnd="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/share"
            style="@style/Text"
            android:text="@string/Share_app" />

        <ImageView
            style="@style/Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Support"
            style="@style/Text"
            android:text="@string/Write_to_support"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="end"
            android:layout_marginTop="22.1dp"
            android:layout_marginEnd="14dp"
            style="@style/Icon"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:layout_marginTop="31.1dp"
            android:layout_marginEnd="20dp"
            style="@style/Icon"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:layout_marginTop="31.1dp"
            android:layout_marginEnd="26dp"
            style="@style/Icon"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hair"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="18dp"
            style="@style/Icon"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/terms"
            style="@style/Text"
            android:text="@string/Terms_of_use"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            style="@style/Icon"
            />

    </FrameLayout>
</LinearLayout>