<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_activity"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_gravity="start"
        android:textColor="@color/bg_button"

        />
        <Button
            android:id="@+id/search"
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/start_main"
            android:layout_marginEnd="@dimen/end_main"
            android:backgroundTint="@color/bg_button"
            android:textColor="@color/text_main"
            app:cornerRadius="@dimen/icon_radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/media"
            android:text="@string/media_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:layout_marginStart="@dimen/start_main"
            android:layout_marginEnd="@dimen/end_main"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/bg_button"
            android:textColor="@color/text_main"
            app:cornerRadius="@dimen/icon_radius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/settings"
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:layout_marginStart="@dimen/start_main"
            android:layout_marginEnd="@dimen/end_main"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/bg_button"
            android:textColor="@color/text_main"
            app:cornerRadius="@dimen/icon_radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="10dp"
            android:layout_weight="1"
            />
</LinearLayout>