<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
style="@style/colorAllScreen"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".ui.search.fragment.SearchFragment">

<Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/toolbar_text"
        android:text="@string/search" />
</Toolbar>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">


    <EditText
        android:id="@+id/SearchForm"
        style="@style/search_form"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/small_search"
        android:drawablePadding="8dp"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="32dp"
        android:singleLine="true" />


    <ImageView
        android:id="@+id/clear"
        style="@style/search_form"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_gravity="center|end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_menu_close_clear_cancel"
        android:visibility="gone" />

</FrameLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerViewSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

<FrameLayout
    android:id="@+id/no_result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="110dp"
    android:orientation="horizontal"
    android:visibility="gone"
    tools:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="top|center"
        android:src="@drawable/no_result"
        app:iconGravity="textStart" />

    <TextView
        style="@style/all_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="140dp"
        android:text="@string/no_result"
        android:textStyle="bold" />
</FrameLayout>

<LinearLayout
    android:id="@+id/no_internet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="110dp"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:src="@drawable/no_internet"
        app:iconGravity="textStart" />

    <TextView
        android:id="@+id/no_inet_placeholder"
        style="@style/all_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/enet_error"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/update_button"
        style="@style/button"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="25dp"
        android:text="@string/update" />

</LinearLayout>


<LinearLayout
    android:id="@+id/history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/historyText"
        style="@style/all_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/history_text"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_music" />

    <Button
        android:id="@+id/button_history"
        style="@style/button"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/Update_history"
        android:visibility="gone" />


</LinearLayout>

<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="44dp"
    android:layout_height="44dp"
    android:layout_gravity="center"
    android:layout_marginTop="140dp"
    android:baselineAligned="false"
    android:indeterminateTint="@color/YP_Blue"
    android:visibility="gone" />


</LinearLayout>