<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize = "22sp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="28dp"
            android:textStyle="bold"/>

    </Toolbar>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:layout_marginStart="16dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/track"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/knob"
            android:layout_gravity="end"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="35dp"
            />


    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:layout_marginStart="16dp"
            android:text="@string/Share_app"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"

            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/black"
            android:text="@string/Write_to_support"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:layout_marginStart="16dp"

            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:layout_gravity="end"
            android:layout_marginTop="22.1dp"
            android:layout_marginEnd="14dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:layout_marginTop="31.1dp"
            android:layout_marginEnd="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye"
            android:layout_gravity="end"
            android:layout_marginTop="31.1dp"
            android:layout_marginEnd="26dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hair"
            android:layout_gravity="end"
            android:layout_marginTop="25.1dp"
            android:layout_marginEnd="18dp"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/black"
            android:text="@string/Terms_of_use"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:layout_marginStart="16dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            />

    </FrameLayout>
</LinearLayout>