<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/search">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            style="@style/toolbar_image"
            />
        <TextView
            android:text="@string/search"
            style="@style/toolbar_text"
            />
    </Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


        <EditText
            android:id="@+id/SearchForm"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/small_search"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="32dp"
            style="@style/search_form"
            />


        <ImageView
            android:id="@+id/clear"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center|end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_menu_close_clear_cancel"
            android:visibility="gone"
            style="@style/search_form"
             />
        
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"
        />
    <FrameLayout
        android:id="@+id/no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:visibility="gone"
        tools:visibility= "gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top|center"
            android:src="@drawable/no_result"
            app:iconGravity="textStart" />

        <TextView
            style="@style/all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/no_result"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="140dp"
            android:textStyle="bold"
            />
    </FrameLayout>
    <GridLayout
        android:id="@+id/no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:rowCount="1"
        android:columnCount="1"
        android:visibility="gone"
        tools:visibility= "visible"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src = "@drawable/no_internet"
            app:iconGravity="textStart"
            android:layout_gravity="top|center"
            />

        <TextView
            android:id="@+id/no_inet_placeholder"
            style="@style/all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text = "@string/enet_error"
            android:textAlignment="center"
            android:textStyle="bold" />
        <Button
            style="@style/button_placeholder"
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginTop="25dp"
            android:textSize="14sp"
            app:cornerRadius="54dp"
            android:fontFamily="@font/ys_display_regular"
            android:layout_gravity="bottom|center"
            />

    </GridLayout>


</LinearLayout>